--- a/src/App.css
+++ b/src/App.css
@@ -5,18 +5,27 @@ body{
   text-align: center;
   background-color: rgb(255, 255, 255);
   margin: auto;
+  margin-top: 10px;
   padding-bottom: 10px;
   width: 25%;
   border-radius: 25px;
 }
 .fieldContainer{
+  width: 75%;
+  margin: auto;
   margin-top: 2em;
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
 }
 
 .Card{
   background-color: blanchedalmond;
-  height: 200px;
-  width: 20%;
+  margin-top: 10px;
+  flex: 0 0 32%;
+  height: 20em;
+}
+.Card:hover{
+  background-color: rgb(255, 244, 227);
+  animation-duration: 0.5s;
 }
